--- a/packages/generic-typography/index.scss
+++ b/packages/generic-typography/index.scss
@@ -62,10 +62,13 @@ html {
 
 }
 
-body, h1, h2, h3, h4, h5, h6 {
+body{
   @include font-size(base);
 }
 
+h1, h2, h3, h4, h5, h6 {
+  @include font-size(base--tight);
+}
 
 
 
