--- a/packages/settings-colors/index.scss
+++ b/packages/settings-colors/index.scss
@@ -1,6 +1,7 @@
-/* ==========================================================================
-   #COLOR PALETTES
-   ========================================================================== */
+/*------------------------------------*\
+  Color Palettes
+\*------------------------------------*/
+
 // @import '../setting-colors/package.json';
 // @import '~@bolt/setting-module-manager';
 //
