--- a/packages/settings-global/index.scss
+++ b/packages/settings-global/index.scss
@@ -1,6 +1,7 @@
-/* ==========================================================================
-   #GLOBAL SETTINGS
-   ========================================================================== */
+/*------------------------------------*\
+  Global Settings
+\*------------------------------------*/
+
 // @import '../setting-global/package.json';
 // @import '~@bolt/setting-module-manager';
 //
@@ -9,6 +10,7 @@
 //   $module-version: $version,
 //   $module-dependencies: ()
 // );
+
 $global-font-size: 16px;
 $global-line-height: 1.5 * $global-font-size;
 $global-border-radius: 4px;
