--- a/packages/settings-module-manager/index.scss
+++ b/packages/settings-module-manager/index.scss
@@ -1,6 +1,7 @@
-/* ==========================================================================
-   #MODULE MANAGER
-   ========================================================================== */
+/*------------------------------------*\
+  Module Manager
+\*------------------------------------*/
+
 // @import '../setting-colors/package.json';
 // @import '~@bolt/tools-module-manager'
 
