--- a/packages/settings-spacing/index.scss
+++ b/packages/settings-spacing/index.scss
@@ -1,6 +1,6 @@
-/* ------------------------------------ *\
-  #SPACING SCALE
-\* ------------------------------------ */
+/*------------------------------------*\
+  Spacing Scale
+\*------------------------------------*/
 
 /**
  * Read https://medium.com/eightshapes-llc/space-in-design-systems-188bcbae0d62 for more background into spacing scales for design systems.
