--- a/packages/settings-typography/index.scss
+++ b/packages/settings-typography/index.scss
@@ -27,7 +27,7 @@ $font-monospace: 'Courier New', monospace;
 
 
 /*------------------------------------*\
-  Configurations
+  Configurations (design token --- settings-tokens-typography)
 \*------------------------------------*/
 
 
@@ -52,19 +52,19 @@ $font-code: $font-monospace;
 
 
 /*------------------------------------*\
-  Weights
+  Weights (settings-font-weight)
 \*------------------------------------*/
 
 
 $font-weight--regular: 300;
-$font-weight--bold: 700;
+$font-weight--bold: 600;
 $font-weight--code: 700;
 
 
 
 
 /*------------------------------------*\
-  Sizing
+  Sizing (move to settings-modular-scale)
 \*------------------------------------*/
 
 
@@ -79,7 +79,7 @@ $font-size--max-px: 18px;
 
 
 /*
- * Font Size Scale
+ * Font Size Scale (rem)
  */
 
 $font-scale--xxlarge: 3.083;
