--- a/packages/tools-color-palette/index.scss
+++ b/packages/tools-color-palette/index.scss
@@ -1,6 +1,6 @@
-/* ==========================================================================
-   #COLOR PALETTE
-   ========================================================================== */
+/*------------------------------------*\
+  Color Palette
+\*------------------------------------*/
 
 /**
   * Helper functions for applying global color swatches stored in Sass Maps
