--- a/packages/tools-sassy-maps/index.scss
+++ b/packages/tools-sassy-maps/index.scss
@@ -1,4 +1,5 @@
-/* ==========================================================================
-   #SASSY MAPS
-   ========================================================================== */
+/*------------------------------------*\
+  Sassy Maps
+\*------------------------------------*/
+
 @import 'sassy-maps/sass/sassy-maps';
