--- a/packages/tools-spacing/index.scss
+++ b/packages/tools-spacing/index.scss
@@ -1,6 +1,6 @@
-/* ------------------------------------ *\
-  #SPACING FUNCTION
-\* ------------------------------------ */
+/*------------------------------------*\
+  Spacing
+\*------------------------------------*/
 
 /** Automatically grab the correct size from on our global spacing unit scale. **/
 
