--- a/packages/tools-strip-unit/index.scss
+++ b/packages/tools-strip-unit/index.scss
@@ -1,6 +1,6 @@
-/* ==========================================================================
-   #STRIP-UNIT
-   ========================================================================== */
+/*------------------------------------*\
+  Strip Unit
+\*------------------------------------*/
 
 /// Remove the unit of a length
 /// @param {Number} $number - Number to remove unit from
