--- a/packages/tools-text-contrast/index.scss
+++ b/packages/tools-text-contrast/index.scss
@@ -1,6 +1,6 @@
-/* ==========================================================================
-   #TEXT CONTRAST
-   ========================================================================== */
+/*------------------------------------*\
+  Text Contrast
+\*------------------------------------*/
 
 @import '@bolt/tools-color-palette';
 
