--- a/packages/tools-button-color/index.scss
+++ b/packages/tools-button-color/index.scss
@@ -1,6 +1,6 @@
-/* ==========================================================================
-   #BUTTON-COLOR
-   ========================================================================== */
+/*------------------------------------*\
+  Button Colors
+\*------------------------------------*/
 
 /** Generate different background and border color button interaction states based on the primary color passed in **/
 // @import '~@bolt/setting-module-manager';
@@ -8,7 +8,7 @@
 // @import '../tools-font-size/package.json';
 // @import 'node_modules/sassy-maps/sass/sassy-maps';
 
-//   
+//
 // @include add-module(
 //   $module-name: $name,
 //   $module-version: $version,
@@ -17,8 +17,8 @@
 //     'tool-strip-unit': '0.1.0-alpha.1'
 //   )
 // );
-// 
-// 
+//
+//
 // @include add-module(
 //   $name:    'tools.button-color',
 //   $version: '1.0.0',
