--- a/packages/bolt/bolt.scss
+++ b/packages/bolt/bolt.scss
@@ -4,9 +4,12 @@
 
 @import '@bolt/settings-global';
 @import '@bolt/settings-breakpoints';
-@import '@bolt/settings-typography';
+@import '@bolt/settings-font-family';
+@import '@bolt/settings-font-size';
+@import '@bolt/settings-font-weight';
 @import '@bolt/settings-colors';
 @import '@bolt/settings-spacing';
+@import '@bolt/settings-tokens-fonts';
 
 
 
@@ -15,6 +18,7 @@
   Tools
 \*------------------------------------*/
 
+@import '@bolt/tools-global';
 @import '@bolt/tools-breakpoints';
 @import '@bolt/tools-button-colors';
 @import '@bolt/tools-color-palette';
@@ -31,6 +35,7 @@
   Generic
 \*------------------------------------*/
 
+@import '@bolt/generic-global';
 @import '@bolt/generic-typography';
 
 
