--- a/packages/tools-strip-unit/index.scss
+++ b/packages/tools-strip-unit/index.scss
@@ -3,15 +3,9 @@
 \*------------------------------------*/
 
 /// Remove the unit of a length
+/// @group Tools: Strip Unit
 /// @param {Number} $number - Number to remove unit from
 /// @return {Number} - Unitless number
-
-// @include add-module(
-//   $name:    'tools.strip-unit',
-//   $version: '1.0.0',
-//   $dependencies: ()
-// );
-
 @function strip-unit($number) {
   @if type-of($number) == 'number' and not unitless($number) {
     @return $number / ($number * 0 + 1);
