style: font-family, font-size, font-weight

--- a/packages/bolt/bolt.css
+++ b/packages/bolt/bolt.css
@@ -10,13 +10,13 @@
  * System UI Fonts
  */
 /*
- * System font types
+ * System font categories
  */
 /*
- * Custom font types
+ * Custom font categories
  */
 /*
- * Mapping font types to Bolt's body, heading, and code.
+ * Mapping font categories to Bolt's body, heading, and code.
  */
 /*------------------------------------*  Base Font Size
 \*------------------------------------*/
@@ -30,14 +30,6 @@
 \*------------------------------------*/
 /**
  * Read https://medium.com/eightshapes-llc/space-in-design-systems-188bcbae0d62 for more background into spacing scales for design systems.
- */
-/*------------------------------------*  Defining body and heading fonts
-\*------------------------------------*/
-/*
- * System Fonts (fallback and no-script)
- */
-/*
- * Custom fonts
  */
 /*------------------------------------*  Tools
 \*------------------------------------*/
@@ -101,23 +93,27 @@
  * System UI Fonts
  */
 /*
- * System font types
+ * System font categories
  */
 /*
- * Custom font types
+ * Custom font categories
  */
 /*
- * Mapping font types to Bolt's body, heading, and code.
+ * Mapping font categories to Bolt's body, heading, and code.
  */
 /*------------------------------------*  Base Font Size
 \*------------------------------------*/
 /*------------------------------------*  Scale
+\*------------------------------------*/
+/*------------------------------------*  Weights
 \*------------------------------------*/
 /*------------------------------------*  Sassy Maps
 \*------------------------------------*/
 /*------------------------------------*  Font Stack
 \*------------------------------------*/
 /*------------------------------------*  Font Size
+\*------------------------------------*/
+/*------------------------------------*  Font weight
 \*------------------------------------*/
 /*------------------------------------*  Generic
 \*------------------------------------*/
@@ -165,6 +161,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 1rem;
   line-height: 1.65;
   line-height: 1.111;
+  font-weight: 800;
 }
 
 .js-fonts-loaded h1, .js-fonts-loaded h2, .js-fonts-loaded h3, .js-fonts-loaded h4, .js-fonts-loaded h5, .js-fonts-loaded h6 {
