--- a/packages/generic-typography/index.scss
+++ b/packages/generic-typography/index.scss
@@ -29,8 +29,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   @include font-family(heading);
   @include font-size(base,tight);
-
-  // @TODO: @include font-weight(bold);
+  @include font-weight(bold);
 }
 
 
