--- a/packages/settings-font-size/index.scss
+++ b/packages/settings-font-size/index.scss
@@ -1,5 +1,5 @@
 ////
-/// @group Setting: font-sizes
+/// @group Settings: font size mapping
 /// @author Mike Mai
 ////
 
@@ -39,7 +39,7 @@ $font-leading--xsmall: 1.45;
 
 $font-leading--tight: 1.111;
 
-/// Font Size.
+/// Bolt's definition of all options of possible text sizes.
 /// @type Map
 $font-sizes: (
   font-sizes: (
