--- a/packages/tools-typography/index.scss
+++ b/packages/tools-typography/index.scss
@@ -1,24 +1,28 @@
 ////
-/// @group Setting: font-families
+/// @group Tools: font-stack
 /// @author Mike Mai
 ////
 
-@import '@bolt/settings-font-stack';
+
+@import '@bolt/settings-font-family';
 @import '@bolt/settings-font-size';
+@import '@bolt/settings-font-weight';
 @import '@bolt/tools-sassy-maps'; // So map-get-deep works
+
 
 /*------------------------------------*\
   Font Stack
 \*------------------------------------*/
 
-/// Returns font family.
+
+/// This returns the font-family for a specific element. Brand fonts are the default, with system fonts as the fallback.
 ///
-/// @param {String} $font-family
-///   Font family (a or b).
+/// @param {string} $type
+///   Defines the font-family being used for each type of text: heading, body, or code.
 ///
 @mixin font-family($type, $is_root: false) {
-  $fallback-font-family: map-get-deep($font-stacks, 'font-stacks', $type, 'system');
-  $custom-font-family: map-get-deep($font-stacks, 'font-stacks', $type, 'custom');
+  $fallback-font-family: map-get-deep($font-families, 'font-families', $type, 'system');
+  $custom-font-family: map-get-deep($font-families, 'font-families', $type, 'custom');
 
   font-family: $fallback-font-family;
 
@@ -36,19 +40,25 @@
 
 
 
+
+
 /*------------------------------------*\
   Font Size
 \*------------------------------------*/
 
-/// Returns font size.
+
+/// This returns the font-size and relevant line-height for a specific element.
 ///
-/// @param {String} $font-size
-///   Font size (a or b).
+/// @param {string} $size
+///   Defines the size of the text: xsmall, small, base, medium, large, xlarge, or xxlarge.
 ///
-@mixin font-size($type, $leading: regular) {
-  $font-size: map-get-deep($font-sizes, 'font-sizes', $type, 'font-size');
-  $line-height: map-get-deep($font-sizes, 'font-sizes', $type, 'line-height', 'regular');
-  $line-height--tight: map-get-deep($font-sizes, 'font-sizes', $type, 'line-height', 'tight');
+/// @param {string} $leading
+///   Defines the line-height of the text: regular or tight.
+///
+@mixin font-size($size, $leading: regular) {
+  $font-size: map-get-deep($font-sizes, 'font-sizes', $size, 'font-size');
+  $line-height: map-get-deep($font-sizes, 'font-sizes', $size, 'line-height', 'regular');
+  $line-height--tight: map-get-deep($font-sizes, 'font-sizes', $size, 'line-height', 'tight');
 
   font-size: $font-size;
   line-height: $line-height;
@@ -56,4 +66,23 @@
   @if $leading == 'tight' {
     line-height: $line-height--tight;
   }
+}
+
+
+
+
+/*------------------------------------*\
+  Font weight
+\*------------------------------------*/
+
+
+/// This returns the font-weight for a specific element.
+///
+/// @param {string} $weight
+///   Defines the weight of the text: bold or regular.
+///
+@mixin font-weight($weight) {
+  $font-weight: map-get-deep($font-weights, 'font-weights', $weight);
+
+  font-weight: $font-weight;
 }
