WIP: fixing live reload issues + syncing up internal task functions that call one-another relating to watch tasks

--- a/packages/bolt/bolt.css
+++ b/packages/bolt/bolt.css
@@ -1,204 +1,2 @@
-/* ------------------------------------ *  #BUTTONS
-\* ------------------------------------ */
-/* ==========================================================================
-   #BUTTON-COLOR
-   ========================================================================== */
-/** Generate different background and border color button interaction states based on the primary color passed in **/
-/* ==========================================================================
-   #TEXT CONTRAST
-   ========================================================================== */
-/* ==========================================================================
-   #COLOR PALETTE
-   ========================================================================== */
-/**
-  * Helper functions for applying global color swatches stored in Sass Maps
-  */
-/* ==========================================================================
-   #COLOR PALETTES
-   ========================================================================== */
-/* ==========================================================================
-   #SASSY MAPS
-   ========================================================================== */
-/* ==========================================================================
-   #GLOBAL SETTINGS
-   ========================================================================== */
-/* ==========================================================================
-   #FONT-WEIGHT
-   ========================================================================== */
-/* ==========================================================================
-   #NO SELECT
-   ========================================================================== */
-/* ==========================================================================
-   #FONT-WEIGHT
-   ========================================================================== */
-/* ==========================================================================
-   #GLOBAL SETTINGS
-   ========================================================================== */
-/* ==========================================================================
-   #MODULAR SCALE
-   ========================================================================== */
-/**
-  * Typography sizes based off of 1.2 MS Scale with a 16px base.
-  * http://www.modularscale.com/?16&px&1.2&sass&text
-  */
-/* ==========================================================================
-   #STRIP-UNIT
-   ========================================================================== */
-/* ==========================================================================
-   #SASSY MAPS
-   ========================================================================== */
-/**
-  * Abstracts how font sizes are grabbed and used via modular
-  * typography sizes.
-  */
-/* ------------------------------------ *  #SPACING FUNCTION
-\* ------------------------------------ */
-/** Automatically grab the correct size from on our global spacing unit scale. **/
-/* ------------------------------------ *  #SPACING SCALE
-\* ------------------------------------ */
-/**
- * Read https://medium.com/eightshapes-llc/space-in-design-systems-188bcbae0d62 for more background into spacing scales for design systems.
- */
-/* ==========================================================================
-   #SASSY MAPS
-   ========================================================================== */
-/**
- * 1. Allow us to style box model properties.
- * 2. Line different sized buttons up a little nicer.
- * 3. Make buttons inherit font styles (often necessary when styling `input`s as
- *    buttons).
- * 4. Reset/normalize some styles.
- * 5. Force all button-styled elements to appear clickable.
- * 6. Subtract the border size from the padding value so that buttons do not
- *    grow larger as we add borders.
- */
-.c-bolt-button {
-  font-weight: 600;
-  user-select: none;
-  font-size: 1rem;
-  line-height: 1.5rem;
-  display: inline-block;
-  /* [1] */
-  padding: 9px 32px;
-  text-align: center;
-  /* [4] */
-  cursor: pointer;
-  /* [5] */
-  text-decoration: none;
-  vertical-align: middle;
-  /* [2] */
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 4px;
-  font: inherit;
-  /* [3] */
-  white-space: nowrap;
-  transition: background-color 0.2s ease, border-color 0.2s ease, color 0.2s ease, opacity 0.2s ease;
-  color: #fff;
-  background-color: #ff561d;
-  border-color: #bf4116;
-}
-
-@supports (display: flex) {
-  .c-bolt-button {
-    display: inline-flex;
-    justify-content: center;
-  }
-}
-
-.c-bolt-button:hover, .c-bolt-button:focus, .c-bolt-button:active {
-  text-decoration: none;
-}
-
-.c-bolt-button:hover {
-  color: #fff;
-  background-color: #d94919;
-  border-color: #993411;
-}
-
-.c-bolt-button:focus, .c-bolt-button:active {
-  color: #fff;
-  background-color: #b33c14;
-  border-color: #73270d;
-}
-
-.c-bolt-button--disabled,
-.c-bolt-button[disabled] {
-  cursor: default;
-  opacity: 0.3;
-  pointer-events: none;
-}
-
-.c-bolt-button--flat {
-  color: currentColor;
-  background-color: transparent;
-  border-color: currentColor;
-}
-
-.c-bolt-button--flat:hover {
-  color: currentColor;
-  background-color: rgba(59, 59, 59, 0.235);
-  border-color: currentColor;
-}
-
-.c-bolt-button--flat:focus, .c-bolt-button--flat:active {
-  color: currentColor;
-  background-color: rgba(28, 28, 28, 0.37);
-  border-color: currentColor;
-}
-
-.o-grid {
-  background: red;
-}
-
-.c-button {
-  font-weight: 600;
-  user-select: none;
-  font-size: 1rem;
-  line-height: 1.5rem;
-  display: inline-block;
-  /* [1] */
-  padding: 9px 32px;
-  text-align: center;
-  /* [4] */
-  cursor: pointer;
-  /* [5] */
-  text-decoration: none;
-  vertical-align: middle;
-  /* [2] */
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 4px;
-  font: inherit;
-  /* [3] */
-  white-space: nowrap;
-  transition: background-color 0.2s ease, border-color 0.2s ease, color 0.2s ease, opacity 0.2s ease;
-  color: #fff;
-  background-color: purple;
-  border-color: #600060;
-}
-
-@supports (display: flex) {
-  .c-button {
-    display: inline-flex;
-    justify-content: center;
-  }
-}
-
-.c-button:hover, .c-button:focus, .c-button:active {
-  text-decoration: none;
-}
-
-.c-button:hover {
-  color: #fff;
-  background-color: #6d006d;
-  border-color: #4d004d;
-}
-
-.c-button:focus, .c-button:active {
-  color: #fff;
-  background-color: #5a005a;
-  border-color: #3a003a;
-}
-
+p{color:red}
 /*# sourceMappingURL=bolt.css.map */
