--- a/packages/bolt/bolt.scss
+++ b/packages/bolt/bolt.scss
@@ -1,12 +1,16 @@
 
-$btn-bg-color: #ff561d;
-@import '@bolt/components-button';
-// @import '@bolt/objects-grid';
-// 
+// $btn-bg-color: #ff561d;
+// @import '@bolt/components-button';
+// // @import '@bolt/objects-grid';
+// //
+//
+//
+// .c-button {
+//   @include button();
+//   @include button-color(purple);
+// }
 
 
-.c-button {
-  @include button();
-  @include button-color(purple);
+p {
+  color: red;
 }
-
