WIP: bolt home page

--- a/packages/generic-typography/index.scss
+++ b/packages/generic-typography/index.scss
@@ -39,6 +39,19 @@ h1, h2, h3, h4, h5, h6 {
   Link
 \*------------------------------------*/
 
+
 a {
   text-decoration: none;
+}
+
+
+
+
+/*------------------------------------*\
+  Small text
+\*------------------------------------*/
+
+
+small {
+  @include font-size(xsmall);
 }
