--- a/packages/bolt/bolt.css
+++ b/packages/bolt/bolt.css
@@ -174,6 +174,13 @@ a {
   text-decoration: none;
 }
 
+/*------------------------------------*  Small text
+\*------------------------------------*/
+small {
+  font-size: 0.8rem;
+  line-height: 1.45;
+}
+
 /*------------------------------------*  Elements
 \*------------------------------------*/
 /*------------------------------------*  Objects
