--- a/sandbox/styleguide/source/_layouts/post.html
+++ b/sandbox/styleguide/source/_layouts/post.html
@@ -1,25 +1,55 @@
 ---
 layout: default
 ---
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
-
-  <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta">
-      <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
-        {{ page.date | date: date_format }}
-      </time>
-      {% if page.author %}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>
-      {% endif %}</p>
-  </header>
-
-  <div class="post-content" itemprop="articleBody">
-    {{ content }}
-  </div>
-
-  {% if site.disqus.shortname %}
-    {% include disqus_comments.html %}
-  {% endif %}
-</article>
+<div class="o-layout o-layout--article">
+  <aside>
+    <div class="c-nav c-nav--vertical">
+      <nav>
+        <header role="heading">
+          <h2>Bolt</h2>
+        </header>
+        <ul>
+          <li><a href="javascript:">Get Started</a></li>
+          <li><a href="javascript:">Principles</a></li>
+          <li><a href="javascript:">Elements</a></li>
+          <li><a href="javascript:">Objects</a></li>
+          <li><a href="javascript:">Components</a></li>
+          <li><a href="javascript:">Themes</a></li>
+          <li><a href="javascript:">Utilities</a></li>
+        </ul>
+      </nav>
+    </div>
+  </aside>
+  <main>
+    <div class="o-inset">
+      <article class="c-article" itemscope itemtype="http://schema.org/BlogPosting">
+        <header role="banner">
+          <h1 itemprop="name headline">
+            {{ page.title | escape }}
+          </h1>
+        </header>
+        <small>
+          <p>
+            <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
+              {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
+              {{ page.date | date: date_format }}
+            </time>
+            {% if page.author %}
+              • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>
+            {% endif %}
+          </p>
+        </small>
+        <div itemprop="articleBody">
+          {{ content }}
+        </div>
+      </article>
+    </div>
+  </main>
+  <footer role="contentinfo">
+    <small>
+      <p>
+        <strong>&copy; Pegasystems, Inc.</strong>
+      </p>
+    </small>
+  </footer>
+</div>
