--- a/sandbox/styleguide/source/styles/bolt-styleguide.scss
+++ b/sandbox/styleguide/source/styles/bolt-styleguide.scss
@@ -1,3 +1,73 @@
-body {
-  background: red;
-}
+/*------------------------------------*\
+  Bolt Core
+\*------------------------------------*/
+@import '@bolt/settings';
+@import '@bolt/tools';
+@import '@bolt/generic';
+
+
+
+
+/*------------------------------------*\
+  Settings
+\*------------------------------------*/
+@import '01-settings/settings.all';
+
+
+
+
+/*------------------------------------*\
+  Tools
+\*------------------------------------*/
+@import '02-tools/tools.all';
+
+
+
+
+/*------------------------------------*\
+  Generic
+\*------------------------------------*/
+@import 'normalize-scss/sass/normalize';
+@include normalize();
+
+@import '03-generic/generic.all';
+
+
+
+
+/*------------------------------------*\
+  Elements
+\*------------------------------------*/
+@import '04-elements/elements.all';
+
+
+
+
+/*------------------------------------*\
+  Objects
+\*------------------------------------*/
+@import '05-objects/objects.all';
+
+
+
+
+/*------------------------------------*\
+  Components
+\*------------------------------------*/
+@import '06-components/components.all';
+
+
+
+
+/*------------------------------------*\
+  Themes
+\*------------------------------------*/
+@import '07-themes/themes.all';
+
+
+
+
+/*------------------------------------*\
+  Utilities
+\*------------------------------------*/
+@import '08-utilities/utilities.all';
